2010-09-15  Michael Albinus  <michael.albinus@gmx.de>

	Ensure XEmacs compatibility.

	* Makefile.in (tramp-loaddefs.el): Adapt `autoload-trim-file-name'
	and feature name.
	(distclean): Remove trampver.el, it is handled in the upper Makefile.

	* tramp-compat.el (tramp-compat-with-temp-message)
	(tramp-compat-font-lock-add-keywords, tramp-compat-process-get)
	(tramp-compat-process-put): New defuns.

	* tramp.el (top):
	* tramp-gvfs.el (top):
	* tramp-cache.el (top): Use `tramp-compat-font-lock-add-keywords'.

	* tramp.el (tramp-progress-reporter-update): Use `tramp-compat-funcall.

	* tramp.el (tramp-process-actions):
	* tramp-gvfs.el (tramp-handle-vc-registered):
	* tramp-sh.el (tramp-gvfs-handler-askquestion)
	(tramp-get-remote-stat, tramp-get-remote-readlink): Use
	`tramp-compat-with-temp-message'.

	* tramp-sh.el (top): Require 'cl.
	(tramp-handle-start-file-process): Use `tramp-compat-process-get'.
	(tramp-open-connection-setup-interactive-shell): Use
	`tramp-compat-process-put'.

	* tramp-util.el (top): Require 'tramp-sh.

2010-09-13  Michael Albinus  <michael.albinus@gmx.de>

	Major code cleanup.  Split tramp.el into tramp.el and tramp-sh.el.

	* Makefile.in (LISP_FILES): Remove tramp-fish.el.  Add tramp-sh.el.

	* tramp.el (top): Don't show loading message.  Require just
	'tramp-compat, everything else is required there.  Use
	`ignore-errors' where appropriate.
	(tramp-inline-compress-start-size, tramp-copy-size-limit)
	(tramp-terminal-type, tramp-end-of-output)
	(tramp-initial-end-of-output, tramp-completion-function-alist-rsh)
	(tramp-completion-function-alist-ssh)
	(tramp-completion-function-alist-telnet)
	(tramp-completion-function-alist-su)
	(tramp-completion-function-alist-putty, tramp-remote-path)
	(tramp-remote-process-environment, tramp-sh-extra-args)
	(tramp-actions-before-shell, tramp-uudecode)
	(tramp-perl-file-truename, tramp-perl-file-name-all-completions)
	(tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes)